--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 
     "react-github-calendar": "^4.0.0",
 
+    "react-icons": "^4.10.1",
+
     "react-router-dom": "^6.14.0",
 
     "react-scripts": "5.0.1",
