--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 
     "react-scripts": "5.0.1",
 
+    "react-scroll": "^1.8.9",
+
     "typewriter-effect": "^2.20.1",
 
     "web-vitals": "^2.1.4"
